--- a/branches/MonoGame/Projektimallit/VS2012/FysiikkaPeli_Physics2d/FysiikkaPeli.csproj
+++ b/branches/MonoGame/Projektimallit/VS2012/FysiikkaPeli_Physics2d/FysiikkaPeli.csproj
@@ -43,8 +43,10 @@
   <ItemGroup>
     <Reference Include="Jypeli.MonoGame.Framework, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="Jypeli, Version=6.0.0.0, Culture=neutral, processorArchitecture=x86" />
-    <Reference Include="Jypeli.Physics2d" />
-    <Reference Include="OpenTK">
+    <Reference Include="Jypeli.Physics2d">
+	  <HintPath>$(registry:HKEY_LOCAL_MACHINE\Software\MonoJypeli@Install_Dir)\Common\Jypeli.Physics2d.dll</HintPath>
+    </Reference>
+	<Reference Include="OpenTK">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsGL\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="Lidgren.Network">
