--- a/branches/MonoGame/SimplePhysics/SimplePhysics-WP8.csproj
+++ b/branches/MonoGame/SimplePhysics/SimplePhysics-WP8.csproj
@@ -43,6 +43,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0436</NoWarn>
+    <DocumentationFile>bin\WindowsPhone\x86\Release\SimplePhysics.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|ARM' ">
     <DebugSymbols>true</DebugSymbols>
@@ -67,6 +68,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0436</NoWarn>
+    <DocumentationFile>bin\WindowsPhone\ARM\Release\SimplePhysics.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
