--- a/branches/MonoGame/SimplePhysics/SimplePhysics-Win8.csproj
+++ b/branches/MonoGame/SimplePhysics/SimplePhysics-Win8.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\Jypeli\bin\Windows8\ARM\Debug\</OutputPath>
+    <OutputPath>bin\Windows8\ARM\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE;NETFX_CORE</DefineConstants>
     <NoWarn>;2008</NoWarn>
     <DebugType>full</DebugType>
@@ -23,10 +23,10 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
-    <DocumentationFile>..\Jypeli\bin\Windows8\ARM\Debug\\SimplePhysics.XML</DocumentationFile>
+    <DocumentationFile>bin\Windows8\ARM\Debug\SimplePhysics.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|ARM'">
-    <OutputPath>..\Jypeli\bin\Windows8\ARM\Debug\</OutputPath>
+    <OutputPath>bin\Windows8\ARM\Release\</OutputPath>
     <DefineConstants>TRACE;NETFX_CORE</DefineConstants>
     <Optimize>true</Optimize>
     <NoWarn>;2008</NoWarn>
@@ -35,34 +35,11 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
-    <DocumentationFile>..\Jypeli\bin\Windows8\ARM\Debug\SimplePhysics.XML</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\Jypeli\bin\Windows8\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;NETFX_CORE</DefineConstants>
-    <NoWarn>;2008</NoWarn>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-    <Prefer32Bit>true</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>..\Jypeli\bin\Windows8\x64\Debug\</OutputPath>
-    <DefineConstants>TRACE;NETFX_CORE</DefineConstants>
-    <Optimize>true</Optimize>
-    <NoWarn>;2008</NoWarn>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-    <Prefer32Bit>true</Prefer32Bit>
-    <DocumentationFile>..\Jypeli\bin\Windows8\x64\Debug\SimplePhysics.XML</DocumentationFile>
+    <DocumentationFile>bin\Windows8\ARM\Release\SimplePhysics.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\Jypeli\bin\Windows8\x86\Debug\</OutputPath>
+    <OutputPath>bin\Windows8\x86\Debug\</OutputPath>
     <DefineConstants>TRACE;DEBUG;NETFX_CORE;UseDouble;DISABLE_EFFECTS;DISABLE_WIDGETS</DefineConstants>
     <NoWarn>;2008</NoWarn>
     <DebugType>full</DebugType>
@@ -70,10 +47,10 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
-    <DocumentationFile>..\Jypeli\bin\Windows8\x86\Debug\SimplePhysics.XML</DocumentationFile>
+    <DocumentationFile>bin\Windows8\x86\Debug\SimplePhysics.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>..\Jypeli\bin\Windows8\x86\Release\</OutputPath>
+    <OutputPath>bin\Windows8\x86\Release\</OutputPath>
     <DefineConstants>TRACE;NETFX_CORE;UseDouble;DISABLE_EFFECTS;DISABLE_WIDGETS</DefineConstants>
     <Optimize>true</Optimize>
     <NoWarn>;2008</NoWarn>
@@ -82,7 +59,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
-    <DocumentationFile>..\Jypeli\bin\Windows8\x86\Release\SimplePhysics.XML</DocumentationFile>
+    <DocumentationFile>bin\Windows8\x86\Release\SimplePhysics.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
